[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2", "setuptools_scm_git_archive"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "viashpy/__version__.py"

[tool.black]
target-version = ['py39', 'py310', 'py311']
exclude = '''
(
  \.egg
  | \.git
  | \.venv
  | build
  | dist
  | \.tox
  | viashpy/__version__.py
)
'''