[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    .tox,
    build/,
    dist/,
    env,
    docs/build/
    viash/__version__
select = C,E,F,W,B,B950
extend-ignore = E203, E501


[metadata]
name = viashpy
author = Dries Schaumont
author_email = dries@data-intuitive.com
maintainer = Dries Schaumont
maintainer_email = dries@data-intuitive.com
description = A plugin with various tools and utilities to interact with viash using python.
; project_urls =
;     Changelog = 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
        Development Status :: 4 - Beta
        Framework :: Pytest
        Intended Audience :: Developers
        Topic :: Software Development :: Testing
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3 :: Only
        Operating System :: OS Independent
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.7
setup_requires = 
    setuptools-scm
    setuptools_scm_git_archive
install_requires =
    pytest >= 3.5

[options.extras_require]
dev = tox

[options.entry_points]
pytest11 =
    viashpy = viashpy.testing